News
====

2024-07-28
----------

- Rearrange oscilloscope view
- Normalize vertical settings to +- 1V and adapt settings
- Remove DC from Spectrum
- Fix clipping region in graph
- Add ccpcheck and clang-tidy settings
- Refactor code using above tool hints

2024-02-18
----------

- Refactor interface between AudMeS and CtrlOscope: Pass time or frequency
  data (y axis) along with magnitude (x axis).
- Rewrite graph code taking advantage of the y axis data.
- Add save function to oscilloscope and spectrum.
- Use time instead of samples in oscilloscope.

2023-10-24
----------

- Add simple moving average in spectrum view.
- Rearrange spectrum view and increase refresh rate.
- Remember selected device in configuration window.
Code was contributed by user Johannes.

2023-04-09
----------

- Add mono channel support as requested by users.
- Refactor several files.
- Drop frequency measurement in oscilloscope - spectrum does it now
  and can be run in parallel. Gives better resolution and magnitude.

2022-10-09
----------

- Update README with binaries installation and Visual Studio instructions
- Fix frequency response export in Windows
- Add Visual Studio and MSVC support
- Update RtAudio to 5.2.0
- Increase font size in legend

2022-04-20
----------

- Display base frequency, magnitude and THD in spectrum.
- Add Blackman-Harris window function.
- Increase resolution (> 16 bit) using floating point audio data.
- Catch more errors to avoid crash.
- Compile in DirectSound and WASAPI on Windows.
- Use timer loop instead of sleep for frequency response.

2021-11-04
----------

- Reformat README.md and fix instructions.
- Update to latest RtAudio.
- Switch to WASAPI on Windows.
- Add package creation with CMake.
- Set CMake build type to Release as default.
- Add build instructions for MacOSX.
- Fix Blackman window function.
- Display RtAUdio info in About popup.
- Compile Linux with Alsa and Pulseaudio support.
- Avoid crash when sound card channels are mono or missing.
